--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -93,7 +93,15 @@ doctrine:
                 is_bundle: false
 
 # Swiftmailer Configuration
-swiftmailer: ~
+swiftmailer:
+    transport:  %mailer_transport%
+    encryption: %mailer_encryption%
+    auth_mode:  %mailer_auth_mode%
+    host:       %mailer_host%
+    port:       %mailer_port%
+    username:   %mailer_user%
+    password:   %mailer_password%
+    disable_delivery:  true
 
 fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
