--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -94,7 +94,13 @@ doctrine:
 
 # Swiftmailer Configuration
 swiftmailer:
-    disable_delivery:  true
+    transport:  %mailer_transport%
+    encryption: %mailer_encryption%
+    auth_mode:  %mailer_auth_mode%
+    host:       %mailer_host%
+    port:       %mailer_port%
+    username:   %mailer_user%
+    password:   %mailer_password%
 
 fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
